# app/models/run.go
@@ -1,12 +1,16 @@
 package models
 
 import (
-	"gorm.io/gorm"
+	"time"
 )
 
 type Run struct {
-	gorm.Model
-	UserId   uint  `json:"user_id"`
-	Distance int64 `json:"distance"`
-	Time     int64 `json:"time"`
+	ID        uint       `gorm:"primarykey" json:"id"`
+	CreatedAt time.Time  `json:"created_at"`
+	UpdatedAt time.Time  `json:"updated_at"`
+	DeletedAt *time.Time `gorm:"index" json:"-"`
+	UserId    uint       `json:"user_id"`
+	User      User       `json:"-"`
+	Distance  int64      `json:"distance"`
+	Time      int64      `json:"time"`
 }
