# app/models/user.go
@@ -1,13 +1,16 @@
 package models
 
 import (
-	"gorm.io/gorm"
+	"time"
 )
 
 type User struct {
-	gorm.Model
-	Username string `json:"username"`
-	Password string `json:"-"`
-	Active   bool   `json:"active"`
-	IsAdmin  bool   `json:"is_admin"`
+	ID        uint       `gorm:"primarykey" json:"id"`
+	CreatedAt time.Time  `json:"created_at"`
+	UpdatedAt time.Time  `json:"updated_at"`
+	DeletedAt *time.Time `gorm:"index" json:"-"`
+	Username  string     `json:"username"`
+	Password  string     `json:"-"`
+	Active    bool       `json:"active"`
+	IsAdmin   bool       `json:"is_admin"`
 }
